crates/figue/src/schema/snapshots/figue__schema__tests__snapshot_schema_top_level_enum.snap
---
source: crates/figue/src/schema/tests.rs
assertion_line: 229
expression: stripped
---
Error: top-level shape must be a struct
   ╭─[ <unknown>:1:1 ]
   │
 1 │ ╭─▶ #[derive(Facet)]
   ┆ ┆   
 3 │ │   enum TopLevelEnum {
   │ │        ──────┬─────  
   │ │              ╰─────── defined at crates\figue\src\schema\tests.rs:216
   ┆ ┆   
 5 │ ├─▶ }
   │ │   ┬  
   │ │   ╰── end of definition
   │ │      
   │ ╰────── top-level shape must be a struct
───╯
